--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "firebase": "^6.3.1",
     "native-base": "^2.12.2",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-gifted-chat": "^0.9.11",
+    "react-native-image-picker": "^0.28.0",
     "react-native-numeric-input": "^1.8.3",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-vector-icons": "^6.6.0",
